Media queries - responsive menu

--- a/app/cars.html
+++ b/app/cars.html
@@ -98,7 +98,7 @@
 
                                     <article class="cars_box"><!--box 6-->
 
-                                        <div class="media-object cars_box_img float-left">
+                                        <div class="media-object cars_box_img ">
 
                                             <div class="responsive car">
                                                 <img src="images/car-rental-website-cheverolet-aveo.png" title="car-rental-website-cheverolet-aveo-" />
@@ -989,10 +989,6 @@
         <script src="foundation-sites/js/foundation.core.js"></script>
         <script src="foundation-sites/js/foundation.util.triggers.js"></script>
         <script src="foundation-sites/js/foundation.util.mediaQuery.js"></script>
-        <script src="foundation-sites/js/foundation.accordionMenu.js"></script>
-        <script src="foundation-sites/js/foundation.drilldown.js"></script>
-        <script src="foundation-sites/js/foundation.dropdownMenu.js"></script>
-        <script src="foundation-sites/js/foundation.util.keyboard.js"></script>
         <script src="foundation-sites/js/foundation.responsiveMenu.js"></script>
         <script src="foundation-sites/js/foundation.responsiveToggle.js"></script>
 
