--- a/app/location.html
+++ b/app/location.html
@@ -42,7 +42,7 @@
 <header id="header">
 <div class="title-bar" data-responsive-toggle="primary_nav" data-hide-for="medium">
 <button type="button" data-toggle >Menu</button>
-</div>          
+</div>
 
 <div class="top-bar">
 
@@ -491,21 +491,17 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script>
-window.jQuery || document.write('<script src="../bower_components/jquery/dist/jquery.min.js"><\/script>');
+    window.jQuery || document.write('<script src="scripts/jquery/dist/jquery.min.js"><\/script>');
 </script>
 
 <script src="//cdn.jsdelivr.net/foundation/4.3.1/js/foundation.min.js"></script>
-<script src="../bower_components/foundation-sites/dist/js/foundation.js"></script>
-<script src="../bower_components/foundation-sites/dist/js/app.js"></script>
-<script src="../bower_components/foundation-sites/js/foundation.core.js"></script>
-<script src="../bower_components/foundation-sites/js/foundation.util.triggers.js"></script>
-<script src="../bower_components/foundation-sites/js/foundation.util.mediaQuery.js"></script>
-<script src="../bower_components/foundation-sites/js/foundation.accordionMenu.js"></script>
-<script src="../bower_components/foundation-sites/js/foundation.drilldown.js"></script>
-<script src="../bower_components/foundation-sites/js/foundation.dropdownMenu.js"></script>
-<script src="../bower_components/foundation-sites/js/foundation.util.keyboard.js"></script>
-<script src="../bower_components/foundation-sites/js/foundation.responsiveMenu.js"></script>
-<script src="../bower_components/foundation-sites/js/foundation.responsiveToggle.js"></script>
+<script src="foundation-sites/dist/js/foundation.js"></script>
+<script src="foundation-sites/dist/js/app.js"></script>
+<script src="foundation-sites/js/foundation.core.js"></script>
+<script src="foundation-sites/js/foundation.util.triggers.js"></script>
+<script src="foundation-sites/js/foundation.util.mediaQuery.js"></script>
+<script src="foundation-sites/js/foundation.responsiveMenu.js"></script>
+<script src="foundation-sites/js/foundation.responsiveToggle.js"></script>
 
 
 </body>
