--- a/app/500.html
+++ b/app/500.html
@@ -146,5 +146,9 @@
         <script src="foundation-sites/js/foundation.responsiveMenu.js"></script>
         <script src="foundation-sites/js/foundation.responsiveToggle.js"></script>
         <!-- Fallback to local -->
+        <script>
+		$(document).foundation();
+
+	</script>
     </body>
 </html>
