--- a/app/cars.html
+++ b/app/cars.html
@@ -996,6 +996,11 @@
 
 
         <script src="foundation-sites/js/foundation.tabs.js"></script>
+        
+        <script>
+		$(document).foundation();
+
+	</script>
 
     </body>
 </html>
