--- a/app/location.html
+++ b/app/location.html
@@ -502,7 +502,10 @@
 <script src="foundation-sites/js/foundation.util.mediaQuery.js"></script>
 <script src="foundation-sites/js/foundation.responsiveMenu.js"></script>
 <script src="foundation-sites/js/foundation.responsiveToggle.js"></script>
+<script>
+		$(document).foundation();
 
+	</script>
 
 </body>
 </html>
