--- a/app/404.html
+++ b/app/404.html
@@ -144,5 +144,10 @@
         <script src="foundation-sites/js/foundation.responsiveMenu.js"></script>
         <script src="foundation-sites/js/foundation.responsiveToggle.js"></script>
         <!-- Fallback to local -->
+        
+        <script>
+		$(document).foundation();
+
+	</script>
     </body>
 </html>
