--- a/app/index.html
+++ b/app/index.html
@@ -377,6 +377,10 @@
 <script src="foundation-sites/js/foundation.responsiveMenu.js"></script>
 <script src="foundation-sites/js/foundation.responsiveToggle.js"></script>
 
+<script>
+		$(document).foundation();
+
+	</script>
 
 <script>
 
