--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
 
         <title>Car-Rental-Contact-Page</title>
 
-        <link rel="stylesheet" href="foundation-sites/dist/css/foundation.css" />
+        <link rel="stylesheet" href="bower_components/foundation-sites/dist/css/foundation.css" />
         <link rel="stylesheet" href="normalize-min.css" />
         <link rel="stylesheet" href="style-min.css" />
         <link href='http://fonts.googleapis.com/css?family=Signika:400,600,700,300' rel='stylesheet' type='text/css'>
@@ -39,7 +39,7 @@
                     <div class="large-12 medium-12 small-12 columns">
                                      <header id="header">
                             <div class="title-bar" data-responsive-toggle="primary_nav" data-hide-for="medium">
-                                <button type="button" data-toggle >Menu</button>
+                                <button type="button" class="menu-icon" data-toggle ></button>
                             </div>
 
                             <div class="top-bar">
@@ -186,19 +186,27 @@
 
         <!-- jsDelivr CDN -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-        <script>
-            window.jQuery || document.write('<script src="scripts/jquery/dist/jquery.min.js"><\/script>');
+        <script> window.jQuery || document.write('<script src="bower_components/jquery/dist/jquery.min.js"><\/script>');
         </script>
         <!-- Fallback to local -->
         <script src="//cdn.jsdelivr.net/foundation/4.3.1/js/foundation.min.js"></script>
-        <script src="foundation-sites/dist/js/foundation.js"></script>
-        <script src="foundation-sites/dist/js/app.js"></script>
-        <script src="foundation-sites/js/foundation.core.js"></script>
-        <script src="foundation-sites/js/foundation.util.triggers.js"></script>
-        <script src="foundation-sites/js/foundation.util.mediaQuery.js"></script>
-        <script src="foundation-sites/js/foundation.responsiveMenu.js"></script>
-        <script src="foundation-sites/js/foundation.responsiveToggle.js"></script>
+        <script src="bower_components/foundation-sites/dist/js/foundation.js"></script>
+        <script src="bower_components/foundation-sites/dist/js/app.js"></script>
+        <script src="bower_components/foundation-sites/js/foundation.core.js"></script>
+        <script src="bower_components/foundation-sites/js/foundation.toggler.js"></script>
+        <script src="bower_components/foundation-sites/js/foundation.util.triggers.js"></script>
+        <script src="bower_components/foundation-sites/js/foundation.util.motion.js"></script>
+        <script src="bower_components/foundation-sites/js/foundation.util.mediaQuery.js"></script>
+        <script src="bower_components/foundation-sites/js/foundation.responsiveMenu.js"></script>
+        <script src="bower_components/foundation-sites/js/foundation.responsiveToggle.js"></script>
+
+
+        <script>
+        var elem = new Foundation.ResponsiveMenu('#primary_nav');
+        //$('#primary_nav').foundation('toggle');
+        </script>
         <!-- Fallback to local -->
+        <script>
 
     </body>
 </html>
