--- a/car-rental-foundation/404.html
+++ b/car-rental-foundation/404.html
@@ -1,10 +1,8 @@
 <!DOCTYPE HTML>
 <html class="no-js" lang="zxx">
-
     <head>
-
         <meta charset="utf-8" />
-
+        <!--Scale-->
         <meta name="viewport" content="minimum-scale=0">
         <meta name="viewport" content="user-scalable=yes">
         <meta name="viewport" content="target-densitydpi=device-dpi">
@@ -12,19 +10,18 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <meta name="copyright" content="&copy;raymondthompson" />
         <meta name="robots" content="noindex,nofollow">
+        <!--End Scale-->
+        <title>Car-Rental-401-Page</title>
 
-        <title>Car-Rental-500-Page</title>
-
-        <link rel="stylesheet" href="bower_components/foundation-sites/dist/css/foundation.css" />
+        <link rel="stylesheet" href="dist/css/foundation.css" />
         <link rel="stylesheet" href="normalize-min.css" />
         <link rel="stylesheet" href="style-min.css" />
         <link href='http://fonts.googleapis.com/css?family=Signika:400,600,700,300' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="foundation-icons/foundation-icons.css">
-
         <!--[if lt IE 9]>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.2/html5shiv.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script>
-        <link rel="stylesheet" href="styles/ie8.css" />
+        <link rel="stylesheet" href="styles/ie8-min.css" />
         <script src="scripts/html5shiv.min.js"></script>
         <script src="scripts/Respond-master/dest/respond.min.js"></script>
         <script src="scripts/selectivizr.min.js"></script>
@@ -40,7 +37,7 @@
                     <div class="large-12 medium-12 small-12 columns">
                                      <header id="header">
                             <div class="title-bar" data-responsive-toggle="primary_nav" data-hide-for="medium">
-                                <button type="button" data-toggle >Menu</button>
+                                <button type="button" class="menu-icon" data-toggle ></button>
                             </div>
 
                             <div class="top-bar">
@@ -81,7 +78,7 @@
                 <div class="row"><!--content-->
                     <div class="large-12 medium-12 small-12 columns">
 
-                        <h1>500 Error Page</h1>
+                        <h1>401 Error Page</h1>
 
 
 
@@ -132,21 +129,23 @@
 
         </div><!--row end-->
 
-        <!-- jsDelivr CDN -->
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-        <script> window.jQuery || document.write('<script src="bower_components/jquery/dist/jquery.min.js"><\/script>');
-        </script>
-        <!-- Fallback to local -->
-        <script src="//cdn.jsdelivr.net/foundation/4.3.1/js/foundation.min.js"></script>
-        <script src="bower_components/foundation-sites/dist/js/foundation.js"></script>
-        <script src="bower_components/foundation-sites/dist/js/app.js"></script>
-        <script src="bower_components/foundation-sites/js/foundation.core.js"></script>
-        <script src="bower_components/foundation-sites/js/foundation.toggler.js"></script>
-        <script src="bower_components/foundation-sites/js/foundation.util.triggers.js"></script>
-        <script src="bower_components/foundation-sites/js/foundation.util.motion.js"></script>
-        <script src="bower_components/foundation-sites/js/foundation.util.mediaQuery.js"></script>
-        <script src="bower_components/foundation-sites/js/foundation.responsiveMenu.js"></script>
-        <script src="bower_components/foundation-sites/js/foundation.responsiveToggle.js"></script>
+         <!-- jsDelivr CDN -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script>
+        window.jQuery || document.write('<script src="scripts/jquery/dist/jquery.min.js"><\/script>');
+
+    </script>
+    <!-- Fallback to local -->
+    <script src="//cdn.jsdelivr.net/foundation/4.3.1/js/foundation.min.js"></script>
+    <script src="dist/js/foundation.js"></script>
+    <script src="dist/js/app.js"></script>
+    <script src="dist/js/plugins/foundation.core.js"></script>
+    <script src="dist/js/plugins/foundation.toggler.js"></script>
+    <script src="dist/js/plugins/foundation.util.triggers.js"></script>
+    <script src="dist/js/plugins/foundation.util.motion.js"></script>
+    <script src="dist/js/plugins/foundation.util.mediaQuery.js"></script>
+    <script src="dist/js/plugins/foundation.responsiveMenu.js"></script>
+    <script src="dist/js/plugins/foundation.responsiveToggle.js"></script>
 
 
         <script>
