--- a/car-rental-foundation/about.html
+++ b/car-rental-foundation/about.html
@@ -11,12 +11,12 @@
         <meta name="robots" content="noindex,nofollow">
 
 
-        <title>Car-Rental-Contact-Page</title>
+        <title>Car-Rental-About-Page</title>
 
-        <link rel="stylesheet" href="bower_components/foundation-sites/dist/css/foundation.css" />
+           <link rel="stylesheet" href="dist/css/foundation.css" />
         <link rel="stylesheet" href="normalize-min.css" />
         <link rel="stylesheet" href="style-min.css" />
-        <link href='http://fonts.googleapis.com/css?family=Signika:400,600,700,300' rel='stylesheet' type='text/css'>
+        <link href="http://fonts.googleapis.com/css?family=Signika:400,600,700,300" rel="stylesheet" type="text/css">
         <link rel="stylesheet" href="foundation-icons/foundation-icons.css">
 
         <!--[if lt IE 9]>
@@ -29,6 +29,7 @@
         <![endif]-->
 
     </head>
+
     <body>
 
         <div class="row">
@@ -77,65 +78,30 @@
                 </div>
                 <!--header end-->
 
-                <div class="row">
+                <div class="row"><!--inner wrapper-->
 
                     <div class="large-9 medium-9 small-12 columns">
 
                         <article id="left_column">
+                            <h1>About</h1>
+                            <p><strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam tempus libero et est egestas placerat. Aliquam eu scelerisque orci. Vestibulum elementum pulvinar sagittis. Nam mattis massa eu turpis eleifend et vestibulum justo convallis. Pellentesque in velit odio.</strong></p>
+                            <br/>
+                            <p> Duis lorem eros, elementum eu hendrerit id, accumsan ac nulla. Phasellus sapien ipsum, ultricies in accumsan et, lobortis et tellus. Cras ac sapien eget nulla rutrum imperdiet. Nam auctor, lectus nec tincidunt laoreet, nisl mi iaculis arcu, et faucibus mi mauris et arcu. Vivamus in risus eget lacus consectetur hendrerit ac vel urna. Maecenas pulvinar vehicula volutpat. Phasellus ac purus quis nisi tincidunt scelerisque id in arcu. Nunc suscipit, magna et pulvinar consequat, neque nunc blandit nibh, at pellentesque urna ante sed arcu. Suspendisse mollis ullamcorper turpis, eget vestibulum tortor consectetur in. Nunc non dolor nulla.</p>
+                            <br/>
+                            <h3>Vivamus eget lorem libero.</h3>
+                            <p>Aenean odio odio, faucibus ut vestibulum cursus, venenatis nec risus. Nulla eu libero ipsum, ut scelerisque sapien. Sed vestibulum lobortis quam, vehicula adipiscing purus posuere eget. Nunc eros dui, sodales nec vehicula vel, accumsan ut orci. Praesent viverra tellus a dolor gravida non scelerisque dolor laoreet. Duis rutrum sapien nec lectus malesuada fringilla scelerisque lorem adipiscing. Praesent tincidunt dignissim pharetra. Integer id mi sed arcu dignissim venenatis eu tincidunt justo.</p>
+                            <br/>
+                            <h3>Nulla facilisi.</h3>
+                            <p>Aenean vehicula, ligula placerat pharetra placerat, nulla nibh suscipit est, quis cursus erat magna vel mi. Fusce leo tortor, facilisis sed ullamcorper sed, viverra tempus lacus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vivamus in ipsum eu sapien pretium hendrerit sit amet ac mi. Maecenas convallis est id urna ornare ut blandit arcu mattis. Maecenas lectus nisl, consectetur condimentum dictum vitae, tempor vitae mauris. Etiam tincidunt, justo mollis sodales porta, neque nulla fermentum dolor, in tempor lorem diam dignissim enim. Maecenas vitae dolor nisi. Integer venenatis, mi in commodo fringilla, felis velit pretium augue, sed lacinia justo dolor at justo. Aliquam nec elit urna, id tempus enim. Vivamus facilisis, odio a tempus placerat, mi odio condimentum dolor, a semper orci quam in ipsum. Fusce vehicula arcu magna. Mauris cursus accumsan mi, at congue ipsum pellentesque lobortis. In vitae viverra enim.</p>
 
-                            <h1>Contact</h1>
-                            <p>Nulla cursus dolor in enim sagittis fringilla. Aenean consequat tellus eu nisl bibendum facilisis. Nulla cursus dolor in enim sagittis fringilla. Aenean consequat tellus eu nisl bibendum facilisis.</p>
-                            <br/><br/>
-
-                            <form id="contact_form">
-
-                                <div class="row">
-                                    <div class="large-2 medium-2 small-2 columns">
-                                        <label for="Name">Name</label>
-                                    </div>
-                                    <div class="large-10 medium-10 small-10 columns">
-                                        <input type="text"  required pattern="[a-zA-Z]+" />
-                                    </div>
-                                </div>
-
-                                <div class="row">
-                                    <div class="large-2 medium-2 small-2 columns">
-                                        <label for="E-mail">E-mail </label>
-                                    </div>
-                                    <div class="large-10 medium-10 small-10 columns">
-                                        <input type="text"  required />
-                                    </div>
-                                </div>
-
-                                <div class="row">
-                                    <div class="large-2 medium-2 small-2 columns">
-                                        <label for="Message">Message</label>
-                                    </div>
-                                    <div class="large-10 medium-10 small-10 columns">
-                                        <textarea col="10" rows="7" pattern="[0-9][a-zA-Z]"></textarea>
-                                    </div>
-                                </div>
-                                <br/>
-                                <div class="row">
-                                    <div class="large-2 medium-2 small-2 columns">
-
-                                    </div>
-                                    <div class="large-10 medium-10 small-10 columns">
-                                        <input type="submit" class="button" value="Send">
-                                    </div>
-                                </div>
-
-                            </form><!--end of contact form -->
-                            <br/><br/>
                         </article>
-
+                        <div class="clearfix"> </div>
                     </div>
 
-                    <div class="large-3 medium-3 columns"  id="right_column">
-
-                        <br/><br/>
+                    <div class="large-3 medium-3 small-12 columns" >
                         <aside id="right_coler">
-                            <br/><br/><br/><br/>
+                            <br/><br/><br/><br/><br/><br/>
+
                             <div class="card" id="image5">
                                 <h2>Subscribe to newsletter</h2>
                                 <div class="card-section">
@@ -155,50 +121,52 @@
                             </div><!--info_box4 end-->
                         </aside>
                     </div>
-                    <div class="clearfix"></div>
-                </div><!--end of inner wrapper -->
+
+                </div><!--inner wrapper end-->
+
 
                 <div class="row"><!--footer-->
                     <footer>
                         <div class="large-12 medium-12 small-12 columns">
 
 
-
                             <ul id="footer_nav">
-                                <li><a href="index.html" >Home</a></li>
-                                <li><a href="specials.html"  >Special Offers</a></li>
-                                <li><a href="cars.html" >Cars</a></li>
-                                <li><a href="location.html" >Locations</a></li>
-                                <li><a href="about.html" >About</a></li>
-                                <li><a href="contact.html" >Contact</a></li>
+                                <li><a href="index.html" title="car-rental-home-page">Home</a></li>
+                                <li><a href="specials.html" title="car-rental-specials-page">Special Offers</a></li>
+                                <li><a href="cars.html" title="car-rental-cars-page">Cars</a></li>
+                                <li><a href="location.html" title="car-rental-location-page">Locations</a></li>
+                                <li><a href="about.html" title="car-rental-about-page">About</a></li>
+                                <li><a href="contact.html" title="car-rental-contact-page">Contact</a></li>
                             </ul>
 
 
                         </div>
                     </footer>
                 </div><!--footer end-->
-
+                <p class="copy">Raymond Thompson 2017 built from Photoshop template downloaded from www.phpjabber.com<br/>
+                    <script type="text/javascript">document.write("Page Last Updated: " + document.lastModified);</script>
+                </p>
             </div><!--wrapper end-->
-            <p class="copy">Raymond Thompson 2017 - built from Photoshop template downloaded from www.phpjabber.com<br/>
-                <script type="text/javascript">document.write("Page Last Updated: " + document.lastModified);</script>
-            </p>
+
         </div><!--row end-->
 
-        <!-- jsDelivr CDN -->
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-        <script> window.jQuery || document.write('<script src="bower_components/jquery/dist/jquery.min.js"><\/script>');
-        </script>
-        <!-- Fallback to local -->
-        <script src="//cdn.jsdelivr.net/foundation/4.3.1/js/foundation.min.js"></script>
-        <script src="bower_components/foundation-sites/dist/js/foundation.js"></script>
-        <script src="bower_components/foundation-sites/dist/js/app.js"></script>
-        <script src="bower_components/foundation-sites/js/foundation.core.js"></script>
-        <script src="bower_components/foundation-sites/js/foundation.toggler.js"></script>
-        <script src="bower_components/foundation-sites/js/foundation.util.triggers.js"></script>
-        <script src="bower_components/foundation-sites/js/foundation.util.motion.js"></script>
-        <script src="bower_components/foundation-sites/js/foundation.util.mediaQuery.js"></script>
-        <script src="bower_components/foundation-sites/js/foundation.responsiveMenu.js"></script>
-        <script src="bower_components/foundation-sites/js/foundation.responsiveToggle.js"></script>
+         <!-- jsDelivr CDN -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script>
+        window.jQuery || document.write('<script src="scripts/jquery/dist/jquery.min.js"><\/script>');
+
+    </script>
+    <!-- Fallback to local -->
+    <script src="//cdn.jsdelivr.net/foundation/4.3.1/js/foundation.min.js"></script>
+    <script src="dist/js/foundation.js"></script>
+    <script src="dist/js/app.js"></script>
+    <script src="dist/js/plugins/foundation.core.js"></script>
+    <script src="dist/js/plugins/foundation.toggler.js"></script>
+    <script src="dist/js/plugins/foundation.util.triggers.js"></script>
+    <script src="dist/js/plugins/foundation.util.motion.js"></script>
+    <script src="dist/js/plugins/foundation.util.mediaQuery.js"></script>
+    <script src="dist/js/plugins/foundation.responsiveMenu.js"></script>
+    <script src="dist/js/plugins/foundation.responsiveToggle.js"></script>
 
 
         <script>
@@ -207,6 +175,5 @@
         </script>
         <!-- Fallback to local -->
         <script>
-
     </body>
 </html>
