--- a/car-rental-foundation/location.html
+++ b/car-rental-foundation/location.html
@@ -16,7 +16,7 @@
 <!--End Scale-->
 <title>Car-Rental-Location-Page</title>
 
-<link rel="stylesheet" href="bower_components/foundation-sites/dist/css/foundation.css" />
+<link rel="stylesheet" href="dist/css/foundation.css" />
 <link rel="stylesheet" href="normalize-min.css" />
 <link rel="stylesheet" href="style-min.css" />
 <link href='http://fonts.googleapis.com/css?family=Signika:400,600,700,300' rel='stylesheet' type='text/css'>
@@ -490,19 +490,23 @@
 
 
 <!-- jsDelivr CDN -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-<script> window.jQuery || document.write('<script src="bower_components/jquery/dist/jquery.min.js"><\/script>');
-</script>
-<!-- Fallback to local -->
-<script src="//cdn.jsdelivr.net/foundation/4.3.1/js/foundation.min.js"></script>
-<script src="bower_components/foundation-sites/dist/js/foundation.js"></script>
-<script src="bower_components/foundation-sites/dist/js/app.js"></script>
-<script src="bower_components/foundation-sites/js/foundation.core.js"></script>
-<script src="bower_components/foundation-sites/js/foundation.toggler.js"></script>
-<script src="bower_components/foundation-sites/js/foundation.util.triggers.js"></script>
-<script src="bower_components/foundation-sites/js/foundation.util.motion.js"></script>
-<script src="bower_components/foundation-sites/js/foundation.responsiveMenu.js"></script>
-<script src="bower_components/foundation-sites/js/foundation.responsiveToggle.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script>
+        window.jQuery || document.write('<script src="scripts/jquery/dist/jquery.min.js"><\/script>');
+
+    </script>
+    <!-- Fallback to local -->
+    <script src="//cdn.jsdelivr.net/foundation/4.3.1/js/foundation.min.js"></script>
+    <script src="dist/js/foundation.js"></script>
+    <script src="dist/js/app.js"></script>
+    <script src="dist/js/plugins/foundation.core.js"></script>
+    <script src="dist/js/plugins/foundation.toggler.js"></script>
+    <script src="dist/js/plugins/foundation.util.triggers.js"></script>
+    <script src="dist/js/plugins/foundation.util.motion.js"></script>
+    <script src="dist/js/plugins/foundation.util.mediaQuery.js"></script>
+    <script src="dist/js/plugins/foundation.responsiveMenu.js"></script>
+    <script src="dist/js/plugins/foundation.responsiveToggle.js"></script>
+        <!-- Fallback to local -->
 
 <script>
 var elem = new Foundation.ResponsiveMenu('#primary_nav');
