--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -59,7 +59,7 @@
       <div class="large-12 medium-12 small-12 cell">
         <!--Quote_form box-->
         <section id="apDiv1">
-          <div class="row">
+          <div class="grid-x grid-padding-x">
             <div class="large-4 medium-4 small-4 cell">
               <p><span class="dropcap">1</span>Date, Time and Location</p>
             </div>
@@ -81,7 +81,7 @@
           <br />
           <!--form-->
           <form id="booking_form" class="group" action="" method="post">
-            <div class="row">
+            <div class="grid-x grid-padding-x">
               <div class="large-3 medium-3 small-4 cell">
                 <label for="rental_start">Rental Start Date/Time</label>
               </div>
@@ -114,7 +114,7 @@
               </div>
             </div>
 
-            <div class="row">
+            <div class="grid-x grid-padding-x">
               <div class="large-3 medium-3 small-4 cell">
                 <label for="rental_end">Rental End Date/Time</label>
               </div>
@@ -147,7 +147,7 @@
                 </select>
               </div>
             </div>
-            <div class="row">
+            <div class="grid-x grid-padding-x">
               <div class="large-3 medium-3 small-4 cell">
                 <label for="pickup_location">Pick Up Location</label>
               </div>
@@ -160,7 +160,7 @@
               </div>
             </div>
 
-            <div class="row">
+            <div class="grid-x grid-padding-x">
               <div class="large-3 medium-3 small-4 cell">
                 <label for="pickup_return">Returning to</label>
               </div>
@@ -173,7 +173,7 @@
               </div>
             </div>
             <br />
-            <div class="row">
+            <div class="grid-x grid-padding-x">
               <div class="large-3 medium-3 small-4 cell"></div>
               <div class="large-9 medium-9 small-8 cell">
                 <span>
@@ -184,7 +184,7 @@
               </div>
             </div>
             <br />
-            <div class="row">
+            <div class="grid-x grid-padding-x">
               <div class="large-3 medium-3 small-4 cell">
                 <span class="query_btn" id="clearQuote" onclick="fadeOut();"
                   >Hide Form</span
@@ -222,7 +222,7 @@
           <!--Banner Text-->
           <figure id="bannerimage">
             <img
-              src="images/car-rental-website-4x4-car.png"
+              src="assets/img/car-rental-website-4x4-car-large.png"
               alt="car-rental-website-4x4-car"
             />
           </figure>
@@ -242,7 +242,7 @@
           <div class="card-section">
             <img
               class="front_img"
-              src="images/car-rental-website-luxury-car-audi.png"
+              src="assets/img/car-rental-website-luxury-car-audi-large.png"
             />
           </div>
           <div class="card-section">
@@ -264,7 +264,7 @@
           <div class="card-section">
             <img
               class="front_img"
-              src="images/car-rental-website-weekend-car-rentals.png"
+              src="assets/img/car-rental-website-weekend-car-rentals-large.png"
               alt="car-rental-website-weekend-car-rentals"
             />
           </div>
@@ -285,7 +285,7 @@
           <div class="card-section">
             <img
               class="front_img"
-              src="images/car-rental-website-locations-map.png"
+              src="assets/img/car-rental-website-locations-map-large.png"
               alt="car-rental-website-locations-map"
             />
           </div>
