--- a/src/pages/specials.html
+++ b/src/pages/specials.html
@@ -55,7 +55,7 @@
     </div>
     <!--header end-->
     <h1>Car Hire WorldWide</h1>
-    <div class="grid-x grid-padding-x"">
+    <div class="grid-x grid-padding-x">
       <div class="large-12 medium-12 cell">
         <ul
           class="tabs"
