tidy up css - html

--- a/src/pages/404.html
+++ b/src/pages/404.html
@@ -12,7 +12,7 @@
             <button type="button" class="menu-icon" data-toggle></button>
           </div>
 
-          <div class="top-bar">
+          <div class="top-bar" data-animate="hinge-in-from-top spin-out">
             <div class="top-bar-left">
               <ul class="title-area">
                 <li class="name">
