--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -68,36 +68,36 @@
           <br /><br />
 
           <form id="contact_form">
-            <div class="row">
-              <div class="large-2 medium-2 small-2 columns">
+            <div class="grid-x grid-padding-x">
+              <div class="large-4 medium-4 small-4 cell">
                 <label for="Name">Name</label>
               </div>
-              <div class="large-10 medium-10 small-10 columns">
+              <div class="large-12 medium-12 small-12 cell">
                 <input type="text" required pattern="[a-zA-Z]+" />
               </div>
             </div>
 
-            <div class="row">
-              <div class="large-2 medium-2 small-2 columns">
+            <div class="grid-x grid-padding-x">
+              <div class="large-4 medium-4 small-4 cell">
                 <label for="E-mail">E-mail </label>
               </div>
-              <div class="large-10 medium-10 small-10 columns">
+              <div class="large-12 medium-12 small-12 cell">
                 <input type="text" required />
               </div>
             </div>
 
-            <div class="row">
-              <div class="large-2 medium-2 small-2 columns">
+            <div class="grid-x grid-padding-x">
+              <div class="large-4 medium-4 small-4 cell">
                 <label for="Message">Message</label>
               </div>
-              <div class="large-10 medium-10 small-10 columns">
+              <div class="large-12 medium-12 small-12 cell">
                 <textarea col="10" rows="7" pattern="[0-9][a-zA-Z]"></textarea>
               </div>
             </div>
             <br />
-            <div class="row">
-              <div class="large-2 medium-2 small-2 columns"></div>
-              <div class="large-10 medium-10 small-10 columns">
+            <div class="grid-x grid-padding-x">
+              <div class="large-2 medium-2 small-2 cell"></div>
+              <div class="large-12 medium-12 small-12 cell">
                 <input type="submit" class="button" value="Send" />
               </div>
             </div>
