--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -58,7 +58,7 @@
     <div class="grid-x grid-padding-x" role="banner">
       <div class="large-12 medium-12 small-12 cell">
         <!--Quote_form box-->
-        <section id="apDiv1">
+        <section id="quoteform">
           <div class="grid-x grid-padding-x">
             <div class="large-4 medium-4 small-4 cell">
               <p><span class="dropcap">1</span>Date, Time and Location</p>
@@ -77,7 +77,7 @@
             </div>
           </div>
 
-          <h1>Get a Car Rental Quote</h1>
+          <h1 id="quoteform-title">Get a Car Rental Quote</h1>
           <br />
           <!--form-->
           <form id="booking_form" class="group" action="" method="post">
@@ -200,32 +200,27 @@
               </div>
             </div>
           </form>
-          <!--form end-->
         </section>
-        <!---appDiv end-->
 
         <figure id="banner">
-          <!--Banner Text-->
-          <figcaption class="big">
+          <figcaption class="bannertext">
             <p>Lorem ipsum dolor sit amet,</p>
             <p>
               Consectetur adipiscing elit.<br />
               Nulla cursus dolor in enim sagittis
             </p>
           </figcaption>
-
-          <div id="index_form_btn" onclick="fadeIn();">
-            Click here to get Quote
-          </div>
-          <!--SeeQuote_button-->
-          <figcaption class="smll"></figcaption>
           <!--Banner Text-->
-          <figure id="bannerimage">
-            <img
-              src="assets/img/car-rental-website-4x4-car-large.png"
-              alt="car-rental-website-4x4-car"
-            />
-          </figure>
+          <img
+            id="bannerimage"
+            src="assets/img/car-rental-website-4x4-car-large.png"
+            alt="car-rental-website-4x4-car"
+          /><!--Banner Image-->
+
+          <div id="index_form_btn">Click here to get Quote</div>
+          <!--SeeQuote_button-->
+
+          <figcaption class="smll"></figcaption>
         </figure>
         <!--banner end-->
       </div>
