more tidying up

--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -1,189 +1,125 @@
-<div class="grid-container">
-  <div id="wrapper">
-    <!--header-->
-    <div class="grid-x grid-padding-x">
-      <div class="large-12 medium-12 small-12 cell">
-        <header id="header">
-          <div
-            class="title-bar"
-            data-responsive-toggle="primary_nav"
-            data-hide-for="medium"
-          >
-            <button type="button" class="menu-icon" data-toggle></button>
-          </div>
 
-          <div class="top-bar">
-            <div class="top-bar-left">
-              <ul class="title-area">
-                <li class="name">
-                  <h1><span>CAR</span> Rental</h1>
-                </li>
-              </ul>
-            </div>
+<div class="grid-x grid-padding-x">
+  <!--inner wrapper-->
 
-            <nav id="primary_nav">
-              <ul class="vertical medium-horizontal menu">
-                <li class="active">
-                  <a href="index.html" title="car-rental-home-page">Home</a>
-                </li>
-                <li>
-                  <a href="specials.html" title="car-rental-specials-page"
-                    >Special Offers</a
-                  >
-                </li>
-                <li>
-                  <a href="cars.html" title="car-rental-cars-page">Cars</a>
-                </li>
-                <li>
-                  <a href="location.html" title="car-rental-location-page"
-                    >Locations</a
-                  >
-                </li>
-                <li>
-                  <a href="about.html" title="car-rental-about-page">About</a>
-                </li>
-                <li>
-                  <a href="contact.html" title="car-rental-contact-page"
-                    >Contact</a
-                  >
-                </li>
-              </ul>
-            </nav>
-          </div>
-        </header>
-      </div>
-    </div>
-    <!--header end-->
-
-    <div class="grid-x grid-padding-x">
-      <!--inner wrapper-->
-
-      <div class="large-9 medium-9 small-12 cell">
-        <article id="left_column">
-          <h1>About</h1>
-          <p>
-            <strong>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
-              tempus libero et est egestas placerat. Aliquam eu scelerisque
-              orci. Vestibulum elementum pulvinar sagittis. Nam mattis massa eu
-              turpis eleifend et vestibulum justo convallis. Pellentesque in
-              velit odio.</strong
-            >
-          </p>
-          <br />
-          <p>
-            Duis lorem eros, elementum eu hendrerit id, accumsan ac nulla.
-            Phasellus sapien ipsum, ultricies in accumsan et, lobortis et
-            tellus. Cras ac sapien eget nulla rutrum imperdiet. Nam auctor,
-            lectus nec tincidunt laoreet, nisl mi iaculis arcu, et faucibus mi
-            mauris et arcu. Vivamus in risus eget lacus consectetur hendrerit ac
-            vel urna. Maecenas pulvinar vehicula volutpat. Phasellus ac purus
-            quis nisi tincidunt scelerisque id in arcu. Nunc suscipit, magna et
-            pulvinar consequat, neque nunc blandit nibh, at pellentesque urna
-            ante sed arcu. Suspendisse mollis ullamcorper turpis, eget
-            vestibulum tortor consectetur in. Nunc non dolor nulla.
-          </p>
-          <br />
-          <h3>Vivamus eget lorem libero.</h3>
-          <p>
-            Aenean odio odio, faucibus ut vestibulum cursus, venenatis nec
-            risus. Nulla eu libero ipsum, ut scelerisque sapien. Sed vestibulum
-            lobortis quam, vehicula adipiscing purus posuere eget. Nunc eros
-            dui, sodales nec vehicula vel, accumsan ut orci. Praesent viverra
-            tellus a dolor gravida non scelerisque dolor laoreet. Duis rutrum
-            sapien nec lectus malesuada fringilla scelerisque lorem adipiscing.
-            Praesent tincidunt dignissim pharetra. Integer id mi sed arcu
-            dignissim venenatis eu tincidunt justo.
-          </p>
-          <br />
-          <h3>Nulla facilisi.</h3>
-          <p>
-            Aenean vehicula, ligula placerat pharetra placerat, nulla nibh
-            suscipit est, quis cursus erat magna vel mi. Fusce leo tortor,
-            facilisis sed ullamcorper sed, viverra tempus lacus. Pellentesque
-            habitant morbi tristique senectus et netus et malesuada fames ac
-            turpis egestas. Vivamus in ipsum eu sapien pretium hendrerit sit
-            amet ac mi. Maecenas convallis est id urna ornare ut blandit arcu
-            mattis. Maecenas lectus nisl, consectetur condimentum dictum vitae,
-            tempor vitae mauris. Etiam tincidunt, justo mollis sodales porta,
-            neque nulla fermentum dolor, in tempor lorem diam dignissim enim.
-            Maecenas vitae dolor nisi. Integer venenatis, mi in commodo
-            fringilla, felis velit pretium augue, sed lacinia justo dolor at
-            justo. Aliquam nec elit urna, id tempus enim. Vivamus facilisis,
-            odio a tempus placerat, mi odio condimentum dolor, a semper orci
-            quam in ipsum. Fusce vehicula arcu magna. Mauris cursus accumsan mi,
-            at congue ipsum pellentesque lobortis. In vitae viverra enim.
-          </p>
-        </article>
-        <div class="clearfix"></div>
-      </div>
-
-      <div class="large-3 medium-3 small-12 cell">
-        <aside id="right_coler">
-          <br /><br /><br /><br /><br /><br />
-
-          <div class="card" id="image5">
-            <h2>Subscribe to newsletter</h2>
-            <div class="card-section">
-              <p>
-                Nulla cursus dolor in enim sagittis fringilla. Aenean consequat
-                tellus eu nisl bibendum facilisis.
-              </p>
-            </div>
-            <form action="" method="post" class="newsletter" data-abide>
-              <input name="NAME" type="text" placeholder="Name" />
-              <!--<small class="error">Name must be letters.</small>-->
-              <input name="EMAIL" type="email" placeholder="Email" required />
-              <!--<small class="error">A valid email address is required.</small>-->
-              <input type="submit" class="link_btn" value="SUBSCRIBE" />
-            </form>
-          </div>
-          <!--info_box4 end-->
-        </aside>
-      </div>
-    </div>
-    <!--inner wrapper end-->
-
-    <div class="grid-x grid-padding-x">
-      <!--footer-->
-      <footer>
-        <div class="large-12 medium-12 small-12 cell">
-          <ul id="footer_nav">
-            <li>
-              <a href="index.html" title="car-rental-home-page">Home</a>
-            </li>
-            <li>
-              <a href="specials.html" title="car-rental-specials-page"
-                >Special Offers</a
-              >
-            </li>
-            <li>
-              <a href="cars.html" title="car-rental-cars-page">Cars</a>
-            </li>
-            <li>
-              <a href="location.html" title="car-rental-location-page"
-                >Locations</a
-              >
-            </li>
-            <li>
-              <a href="about.html" title="car-rental-about-page">About</a>
-            </li>
-            <li>
-              <a href="contact.html" title="car-rental-contact-page">Contact</a>
-            </li>
-          </ul>
-        </div>
-      </footer>
-    </div>
-    <!--footer end-->
-    <p class="copy">
-      Raymond Thompson 2017 built from Photoshop template downloaded from
-      www.phpjabber.com<br />
-      <script type="text/javascript">
-        document.write("Page Last Updated: " + document.lastModified);
-      </script>
-    </p>
+  <div class="large-9 medium-9 small-12 cell">
+  <h1>About</h1>
+    <article id="left_column">
+      
+      <p>
+        <strong>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
+          tempus libero et est egestas placerat. Aliquam eu scelerisque orci.
+          Vestibulum elementum pulvinar sagittis. Nam mattis massa eu turpis
+          eleifend et vestibulum justo convallis. Pellentesque in velit
+          odio.</strong
+        >
+      </p>
+      <br />
+      <p>
+        Duis lorem eros, elementum eu hendrerit id, accumsan ac nulla. Phasellus
+        sapien ipsum, ultricies in accumsan et, lobortis et tellus. Cras ac
+        sapien eget nulla rutrum imperdiet. Nam auctor, lectus nec tincidunt
+        laoreet, nisl mi iaculis arcu, et faucibus mi mauris et arcu. Vivamus in
+        risus eget lacus consectetur hendrerit ac vel urna. Maecenas pulvinar
+        vehicula volutpat. Phasellus ac purus quis nisi tincidunt scelerisque id
+        in arcu. Nunc suscipit, magna et pulvinar consequat, neque nunc blandit
+        nibh, at pellentesque urna ante sed arcu. Suspendisse mollis ullamcorper
+        turpis, eget vestibulum tortor consectetur in. Nunc non dolor nulla.
+      </p>
+      <br />
+      <h3>Vivamus eget lorem libero.</h3>
+      <p>
+        Aenean odio odio, faucibus ut vestibulum cursus, venenatis nec risus.
+        Nulla eu libero ipsum, ut scelerisque sapien. Sed vestibulum lobortis
+        quam, vehicula adipiscing purus posuere eget. Nunc eros dui, sodales nec
+        vehicula vel, accumsan ut orci. Praesent viverra tellus a dolor gravida
+        non scelerisque dolor laoreet. Duis rutrum sapien nec lectus malesuada
+        fringilla scelerisque lorem adipiscing. Praesent tincidunt dignissim
+        pharetra. Integer id mi sed arcu dignissim venenatis eu tincidunt justo.
+      </p>
+      <br />
+      <h3>Nulla facilisi.</h3>
+      <p>
+        Aenean vehicula, ligula placerat pharetra placerat, nulla nibh suscipit
+        est, quis cursus erat magna vel mi. Fusce leo tortor, facilisis sed
+        ullamcorper sed, viverra tempus lacus. Pellentesque habitant morbi
+        tristique senectus et netus et malesuada fames ac turpis egestas.
+        Vivamus in ipsum eu sapien pretium hendrerit sit amet ac mi. Maecenas
+        convallis est id urna ornare ut blandit arcu mattis. Maecenas lectus
+        nisl, consectetur condimentum dictum vitae, tempor vitae mauris. Etiam
+        tincidunt, justo mollis sodales porta, neque nulla fermentum dolor, in
+        tempor lorem diam dignissim enim. Maecenas vitae dolor nisi. Integer
+        venenatis, mi in commodo fringilla, felis velit pretium augue, sed
+        lacinia justo dolor at justo. Aliquam nec elit urna, id tempus enim.
+        Vivamus facilisis, odio a tempus placerat, mi odio condimentum dolor, a
+        semper orci quam in ipsum. Fusce vehicula arcu magna. Mauris cursus
+        accumsan mi, at congue ipsum pellentesque lobortis. In vitae viverra
+        enim.
+      </p>
+    </article>
+    <div class="clearfix"></div>
   </div>
-  <!--wrapper end-->
+
+  <div class="large-3 medium-3 small-12 cell">
+    <aside id="right_column">
+      <br /><br /><br /><br /><br /><br />
+
+      <div class="card" id="image5">
+        <h2>Subscribe to newsletter</h2>
+        <div class="card-section">
+          <p>
+            Nulla cursus dolor in enim sagittis fringilla. Aenean consequat
+            tellus eu nisl bibendum facilisis.
+          </p>
+        </div>
+        <form action="" method="post" class="newsletter" data-abide>
+          <input name="NAME" type="text" placeholder="Name" />
+          <!--<small class="error">Name must be letters.</small>-->
+          <input name="EMAIL" type="email" placeholder="Email" required />
+          <!--<small class="error">A valid email address is required.</small>-->
+          <input type="submit" class="link_btn" value="SUBSCRIBE" />
+        </form>
+      </div>
+      <!--info_box4 end-->
+    </aside>
+  </div>
 </div>
-<!--row end-->
+
+<div class="grid-x grid-padding-x">
+  <!--footer-->
+  <footer>
+    <div class="large-12 medium-12 small-12 cell">
+      <ul id="footer_nav">
+        <li>
+          <a href="index.html" title="car-rental-home-page">Home</a>
+        </li>
+        <li>
+          <a href="specials.html" title="car-rental-specials-page"
+            >Special Offers</a
+          >
+        </li>
+        <li>
+          <a href="cars.html" title="car-rental-cars-page">Cars</a>
+        </li>
+        <li>
+          <a href="location.html" title="car-rental-location-page">Locations</a>
+        </li>
+        <li>
+          <a href="about.html" title="car-rental-about-page">About</a>
+        </li>
+        <li>
+          <a href="contact.html" title="car-rental-contact-page">Contact</a>
+        </li>
+      </ul>
+    </div>
+  </footer>
+</div>
+<!--footer end-->
+<p class="copy">
+  Raymond Thompson 2017 built from Photoshop template downloaded from
+  www.phpjabber.com<br />
+  <script type="text/javascript">
+    document.write("Page Last Updated: " + document.lastModified);
+  </script>
+</p>
