--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -1,165 +1,104 @@
-<div class="grid-container">
-  <div id="wrapper">
-    <!--header-->
-    <div class="grid-x grid-padding-x">
-      <div class="large-12 medium-12 small-12 columns">
-        <header id="header">
-          <div
-            class="title-bar"
-            data-responsive-toggle="primary_nav"
-            data-hide-for="medium"
-          >
-            <button type="button" class="menu-icon" data-toggle></button>
+
+<div class="grid-x grid-padding-x">
+  <div class="large-9 medium-9 small-12 columns">
+  <h1>Contact</h1>
+    <article id="left_column">
+      
+      <p>
+        Nulla cursus dolor in enim sagittis fringilla. Aenean consequat tellus
+        eu nisl bibendum facilisis. Nulla cursus dolor in enim sagittis
+        fringilla. Aenean consequat tellus eu nisl bibendum facilisis.
+      </p>
+      <br /><br />
+
+      <form id="contact_form">
+        <div class="grid-x grid-padding-x">
+          <div class="large-4 medium-4 small-4 cell">
+            <label for="Name">Name</label>
           </div>
-
-          <div class="top-bar">
-            <div class="top-bar-left">
-              <ul class="title-area">
-                <li class="name">
-                  <h1><span>CAR</span> Rental</h1>
-                </li>
-              </ul>
-            </div>
-
-            <nav id="primary_nav">
-              <ul class="vertical medium-horizontal menu">
-                <li class="active">
-                  <a href="index.html" title="car-rental-home-page">Home</a>
-                </li>
-                <li>
-                  <a href="specials.html" title="car-rental-specials-page"
-                    >Special Offers</a
-                  >
-                </li>
-                <li>
-                  <a href="cars.html" title="car-rental-cars-page">Cars</a>
-                </li>
-                <li>
-                  <a href="location.html" title="car-rental-location-page"
-                    >Locations</a
-                  >
-                </li>
-                <li>
-                  <a href="about.html" title="car-rental-about-page">About</a>
-                </li>
-                <li>
-                  <a href="contact.html" title="car-rental-contact-page"
-                    >Contact</a
-                  >
-                </li>
-              </ul>
-            </nav>
+          <div class="large-12 medium-12 small-12 cell">
+            <input type="text" required pattern="[a-zA-Z]+" />
           </div>
-        </header>
-      </div>
-    </div>
-    <!--header end-->
+        </div>
 
-    <div class="grid-x grid-padding-x">
-      <div class="large-9 medium-9 small-12 columns">
-        <article id="left_column">
-          <h1>Contact</h1>
+        <div class="grid-x grid-padding-x">
+          <div class="large-4 medium-4 small-4 cell">
+            <label for="E-mail">E-mail </label>
+          </div>
+          <div class="large-12 medium-12 small-12 cell">
+            <input type="text" required />
+          </div>
+        </div>
+
+        <div class="grid-x grid-padding-x">
+          <div class="large-4 medium-4 small-4 cell">
+            <label for="Message">Message</label>
+          </div>
+          <div class="large-12 medium-12 small-12 cell">
+            <textarea col="10" rows="7" pattern="[0-9][a-zA-Z]"></textarea>
+          </div>
+        </div>
+        <br />
+        <div class="grid-x grid-padding-x">
+          <div class="large-2 medium-2 small-2 cell"></div>
+          <div class="large-12 medium-12 small-12 cell">
+            <input type="submit" class="button" value="Send" />
+          </div>
+        </div>
+      </form>
+      <!--end of contact form -->
+      <br /><br />
+    </article>
+  </div>
+
+  <div class="large-3 medium-3 columns cell">
+    <br /><br />
+    <aside id="right_column">
+      <br /><br /><br /><br />
+      <div class="card" id="image5">
+        <h2>Subscribe to newsletter</h2>
+        <div class="card-section">
           <p>
             Nulla cursus dolor in enim sagittis fringilla. Aenean consequat
-            tellus eu nisl bibendum facilisis. Nulla cursus dolor in enim
-            sagittis fringilla. Aenean consequat tellus eu nisl bibendum
-            facilisis.
+            tellus eu nisl bibendum facilisis.
           </p>
-          <br /><br />
-
-          <form id="contact_form">
-            <div class="grid-x grid-padding-x">
-              <div class="large-4 medium-4 small-4 cell">
-                <label for="Name">Name</label>
-              </div>
-              <div class="large-12 medium-12 small-12 cell">
-                <input type="text" required pattern="[a-zA-Z]+" />
-              </div>
-            </div>
-
-            <div class="grid-x grid-padding-x">
-              <div class="large-4 medium-4 small-4 cell">
-                <label for="E-mail">E-mail </label>
-              </div>
-              <div class="large-12 medium-12 small-12 cell">
-                <input type="text" required />
-              </div>
-            </div>
-
-            <div class="grid-x grid-padding-x">
-              <div class="large-4 medium-4 small-4 cell">
-                <label for="Message">Message</label>
-              </div>
-              <div class="large-12 medium-12 small-12 cell">
-                <textarea col="10" rows="7" pattern="[0-9][a-zA-Z]"></textarea>
-              </div>
-            </div>
-            <br />
-            <div class="grid-x grid-padding-x">
-              <div class="large-2 medium-2 small-2 cell"></div>
-              <div class="large-12 medium-12 small-12 cell">
-                <input type="submit" class="button" value="Send" />
-              </div>
-            </div>
-          </form>
-          <!--end of contact form -->
-          <br /><br />
-        </article>
-      </div>
-
-      <div class="large-3 medium-3 columns" id="right_column">
-        <br /><br />
-        <aside id="right_coler">
-          <br /><br /><br /><br />
-          <div class="card" id="image5">
-            <h2>Subscribe to newsletter</h2>
-            <div class="card-section">
-              <p>
-                Nulla cursus dolor in enim sagittis fringilla. Aenean consequat
-                tellus eu nisl bibendum facilisis.
-              </p>
-            </div>
-            <form action="" method="post" class="newsletter" data-abide>
-              <input name="NAME" type="text" placeholder="Name" />
-              <!--<small class="error">Name must be letters.</small>-->
-              <input name="EMAIL" type="email" placeholder="Email" required />
-              <!--<small class="error">A valid email address is required.</small>-->
-              <input type="submit" class="link_btn" value="SUBSCRIBE" />
-            </form>
-          </div>
-          <!--info_box4 end-->
-        </aside>
-      </div>
-      <div class="clearfix"></div>
-    </div>
-    <!--end of inner wrapper -->
-
-    <div class="grid-x grid-padding-x">
-      <!--footer-->
-      <footer>
-        <div class="large-12 medium-12 small-12 columns">
-          <ul id="footer_nav">
-            <li><a href="index.html">Home</a></li>
-            <li>
-              <a href="specials.html">Special Offers</a>
-            </li>
-            <li><a href="cars.html">Cars</a></li>
-            <li><a href="location.html">Locations</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="contact.html">Contact</a></li>
-          </ul>
         </div>
-      </footer>
-    </div>
-    <!--footer end-->
+        <form action="" method="post" class="newsletter" data-abide>
+          <input name="NAME" type="text" placeholder="Name" />
+          <!--<small class="error">Name must be letters.</small>-->
+          <input name="EMAIL" type="email" placeholder="Email" required />
+          <!--<small class="error">A valid email address is required.</small>-->
+          <input type="submit" class="link_btn" value="SUBSCRIBE" />
+        </form>
+      </div>
+      <!--info_box4 end-->
+    </aside>
+    <div class="clearfix"></div>
   </div>
-  <!--wrapper end-->
-  <p class="copy">
-    Raymond Thompson 2017 - built from Photoshop template downloaded from
-    www.phpjabber.com<br />
-    <script type="text/javascript">
-      document.write("Page Last Updated: " + document.lastModified);
-    </script>
-  </p>
 </div>
-<!--row end-->
+
+<div class="grid-x grid-padding-x">
+  <!--footer-->
+  <footer>
+    <div class="large-12 medium-12 small-12 cell">
+      <ul id="footer_nav">
+        <li><a href="index.html">Home</a></li>
+        <li>
+          <a href="specials.html">Special Offers</a>
+        </li>
+        <li><a href="cars.html">Cars</a></li>
+        <li><a href="location.html">Locations</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </div>
+  </footer>
+</div>
+
+<p class="copy">
+  Raymond Thompson 2017 - built from Photoshop template downloaded from
+  www.phpjabber.com<br />
+  <script type="text/javascript">
+    document.write("Page Last Updated: " + document.lastModified);
+  </script>
+</p>
